--- a/Go-UTM-Stripper/microservice.yml
+++ b/Go-UTM-Stripper/microservice.yml
@@ -2,10 +2,10 @@ microservice:
   spec_version: '2.0'
   name: 'Go_UTM_Stripper'
   description: 'Strips UTM parameters from URLs'
-  docker_image: 'izackp/go_utm_stripper'
+  docker_image: 'izackp/go-utm-stripper'
   docker_image_tag: '0.1'
-  repo_url: 'https://github.com/cloudspace/Go-MySQL-Microservice'
-  docker_hub_url: 'https://registry.hub.docker.com/u/izackp/go_utm_stripper/'
+  repo_url: 'https://github.com/cloudspace/Go-UTM-Stripper'
+  docker_hub_url: 'https://registry.hub.docker.com/u/izackp/go-utm-stripper/'
   category: 'URL'
   tags: ['url', 'utm', 'utm stripper', 'go', 'golang']
   developer_name: 'isaac'
